add first functionalities in reciptioniest dashboard ,update the redirect in acc, appointment

--- a/accounts/templates/registration/profile.html
+++ b/accounts/templates/registration/profile.html
@@ -391,6 +391,8 @@
           <a href="{% url 'doctor_dashboard' %}" class="btn btn-secondary">View Dashboard</a>
         {% elif user.role == 'admin' %}
           <a href="{% url 'users_list' %}" class="btn btn-secondary">Manage Users</a>
+        {% elif user.role == 'receptionist' %}
+          <a href="{% url 'dashboard:recep_dashboard' %}" class="btn btn-secondary">View Dashboard</a>
         {% endif %}
       </div>
     </div>
